# pymagicstrip

./: .gitignore  .pre-commit-config.yaml  README.md  env_init.sh  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: codeql-analysis.yml
pymagicstrip/: __init__.py  const.py  errors.py
