[metadata]
name = pymagicstrip
description = Python Interface for Magic Strip LED Controllers
author = Elahd Bar-Shai
author_email =
version = attr: pymagicstrip.__version__
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/elahd/pymagicstrip
keywords = Magic Strip
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Home Automation

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    bleak==0.14.2